--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "Karan Meghawal",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.2.5"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.1",
     "googleapis": "^135.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
